--- a/web/estilos/style.css
+++ b/web/estilos/style.css
@@ -62,7 +62,10 @@ inputLogin{
     color: #fff;
     text-decoration: none;
 }
-
+.quiz{
+    background-color: #fff;
+    padding: 10px;
+}
 .btn-login{
   width: 100%;
   background-color: #0c5460;
