--- a/web/WEB-INF/JSPF/ultimosquiz.jspf
+++ b/web/WEB-INF/JSPF/ultimosquiz.jspf
@@ -18,15 +18,15 @@
     <tbody>
         <%
             DateFormat df1 = new SimpleDateFormat("dd/MM/yyyy - HH:mm");
+            int uq = 0;
             for (Historic h : Historic.sortByDate(Database.getHistoric())) {
-                User user = new User("Mateus");
+                if (uq <= 9) {
         %>
         <tr>
-            <td><%= h.getUser() %></td>
-            <td><%= h.getResult() %></td>
-            <td><%= df1.format(h.getDate()) %></td>
+            <td><%= h.getUser()%></td>
+            <td><%= h.getResult()%></td>
+            <td><%= df1.format(h.getDate())%></td>
         </tr>
-
+        <% uq++;}}%>
     </tbody>
-    <% } %>
 </table>
