--- a/web/WEB-INF/JSPF/menu.jspf
+++ b/web/WEB-INF/JSPF/menu.jspf
@@ -12,8 +12,10 @@
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="https://github.com/anderson290/quiz-show">Github</a>
+            </li>    
             <% 
-                
                 if (logged != null) {
                     %>
                         <li class="nav-item">
